gramps/TODO
/usr/pkg/libdata/scrollkeeper/db/ru/scrollkeeper_cl.xml:13: parser error : Input is not proper UTF-8, indicate encoding !
    <title>Приложения</title>
           ^
/usr/pkg/libdata/scrollkeeper/db/ru/scrollkeeper_cl.xml:13: error: Bytes: 0xF0 0xD2 0xC9 0xCC
    <title>Приложения</title>

-=-=-=-=

gnome-help wouldn't start:

(gnome-help:12416): Bonobo-CRITICAL **: file bonobo-running-context.c: line 406 (bonobo_running_context_auto_exit_unref): assertion `object != NULL' failed

Yelp-ERROR **: Could not activate Yelp: 'Error checking error; no exception'
aborting...

-=-=

Scrollkeeper v. > 0.3 is required
to properly register documentation.
also used on uninstall

I don't know if omf.mk is needed.
Or how it used at installation or deinstallation time.

-=-=

warning: failed to load external entity "/usr/pkg/share/gramps/gnome/help/gramps/C/gramps-manual.xml%20is%20not%20installed"

but after a minute it worked ...
-=-=-=

GraphViz dot tool used for relationship graphs
-=-=-

If either StandaloneZODB or Zope is installed on your system, GRAMPS will
give you the third option of creating a new ZODB database.  If you have
tons of data to import describing thousands upon thousands of people,
then you are probably better off with ZODB.

-=-=-=
preferences -- you have to click on the arrow itself not just the name

-=-=-=

part of patch-aa is for this.  so maybe not needed if msgconv worked right.
need to test.

Making all in po
/usr/bin/msgconv --to-code=UTF-8 hu.po -o temp.po
/usr/bin/msgconv: Cannot convert from "ISO-8859-2" to "UTF-8". msgconv relies on iconv(). This version was built without iconv().
*** Error code 1

Stop.
bmake: stopped in /tmp/pkgsrc/new/gramps/work.antelope/gramps-0.9.5/src/po

